logs/dag_id=update_dwh/run_id=manual__2023-10-23T17:48:16.286339+00:00/task_id=sat_employee_personal_update/attempt=1.log
[2023-10-23T17:48:28.826+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: update_dwh.sat_employee_personal_update manual__2023-10-23T17:48:16.286339+00:00 [queued]>
[2023-10-23T17:48:28.853+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: update_dwh.sat_employee_personal_update manual__2023-10-23T17:48:16.286339+00:00 [queued]>
[2023-10-23T17:48:28.853+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-10-23T17:48:28.867+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): sat_employee_personal_update> on 2023-10-23 17:48:16.286339+00:00
[2023-10-23T17:48:28.873+0000] {standard_task_runner.py:57} INFO - Started process 4486 to run task
[2023-10-23T17:48:28.878+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'update_dwh', 'sat_employee_personal_update', 'manual__2023-10-23T17:48:16.286339+00:00', '--job-id', '244', '--raw', '--subdir', 'DAGS_FOLDER/update_dwh_dag.py', '--cfg-path', '/tmp/tmp4q1iazpx']
[2023-10-23T17:48:28.880+0000] {standard_task_runner.py:85} INFO - Job 244: Subtask sat_employee_personal_update
[2023-10-23T17:48:28.917+0000] {task_command.py:416} INFO - Running <TaskInstance: update_dwh.sat_employee_personal_update manual__2023-10-23T17:48:16.286339+00:00 [running]> on host 1f8bb8a692af
[2023-10-23T17:48:28.973+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='update_dwh' AIRFLOW_CTX_TASK_ID='sat_employee_personal_update' AIRFLOW_CTX_EXECUTION_DATE='2023-10-23T17:48:16.286339+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-10-23T17:48:16.286339+00:00'
[2023-10-23T17:48:28.974+0000] {sql.py:274} INFO - Executing: 
INSERT INTO TABLE rdv.sat_employee_personal
SELECT DISTINCT
	md5(so.employeenumber::text),
	'csv',
	now(),
	so.name,
	so.lastname,
	so.gender,
	so.age,
	case when so.over18 = 'Y' then true else false end,
	so.maritalstatus,
	so.education,
	so.educationfield,
	so.distancefromhome
FROM
    staging.stg_table so
LEFT OUTER JOIN rdv.sat_employee_personal sat ON (sat.employee_hash_key = md5(so.employeenumber::text) AND sat.created_at IS NULL)
where 
	coalesce(case when so.over18 = 'Y' then true else false end) != coalesce(sat.over_eighteen, false) or
	coalesce(so.name, '') != coalesce(sat.name, '') or
	coalesce(so.lastname, '') != coalesce(sat.lastname, '') or
	coalesce(so.gender, '') != coalesce(sat.gender, '') or
	coalesce(so.age, 0) != coalesce(sat.age, 0) or
	coalesce(so.maritalstatus, '') != coalesce(sat.marital_status, '') or
	coalesce(so.education, 0) != coalesce(sat.education, 0) or
	coalesce(so.educationfield, '') != coalesce(sat.education_field, '') or
	coalesce(so.distancefromhome, 0) != coalesce(sat.distance_field, 0)
[2023-10-23T17:48:28.981+0000] {base.py:73} INFO - Using connection ID 'stg_conn' for task execution.
[2023-10-23T17:48:28.984+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/connection.py:374: AirflowProviderDeprecationWarning: The "schema" arg has been renamed to "database" as it contained the database name.Please use "database" to set the database name.
  return hook_class(**{hook.connection_id_attribute_name: self.conn_id}, **hook_params)

[2023-10-23T17:48:28.989+0000] {base.py:73} INFO - Using connection ID 'stg_conn' for task execution.
[2023-10-23T17:48:29.062+0000] {sql.py:418} INFO - Running statement: 
INSERT INTO TABLE rdv.sat_employee_personal
SELECT DISTINCT
	md5(so.employeenumber::text),
	'csv',
	now(),
	so.name,
	so.lastname,
	so.gender,
	so.age,
	case when so.over18 = 'Y' then true else false end,
	so.maritalstatus,
	so.education,
	so.educationfield,
	so.distancefromhome
FROM
    staging.stg_table so
LEFT OUTER JOIN rdv.sat_employee_personal sat ON (sat.employee_hash_key = md5(so.employeenumber::text) AND sat.created_at IS NULL)
where 
	coalesce(case when so.over18 = 'Y' then true else false end) != coalesce(sat.over_eighteen, false) or
	coalesce(so.name, '') != coalesce(sat.name, '') or
	coalesce(so.lastname, '') != coalesce(sat.lastname, '') or
	coalesce(so.gender, '') != coalesce(sat.gender, '') or
	coalesce(so.age, 0) != coalesce(sat.age, 0) or
	coalesce(so.maritalstatus, '') != coalesce(sat.marital_status, '') or
	coalesce(so.education, 0) != coalesce(sat.education, 0) or
	coalesce(so.educationfield, '') != coalesce(sat.education_field, '') or
	coalesce(so.distancefromhome, 0) != coalesce(sat.distance_field, 0), parameters: None
[2023-10-23T17:48:29.093+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "TABLE"
LINE 2: INSERT INTO TABLE rdv.sat_employee_personal
                    ^

[2023-10-23T17:48:29.106+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=update_dwh, task_id=sat_employee_personal_update, execution_date=20231023T174816, start_date=20231023T174828, end_date=20231023T174829
[2023-10-23T17:48:29.122+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 244 for task sat_employee_personal_update (syntax error at or near "TABLE"
LINE 2: INSERT INTO TABLE rdv.sat_employee_personal
                    ^
; 4486)
[2023-10-23T17:48:29.134+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-23T17:48:29.159+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
